# foreman

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml  todo.md
src/backend/: .dockerignore  Dockerfile  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 30246b22cf35_initial_tables.py  5d2f1a3b7c01_invoice_tables.py  7a1b9c0e3f10_add_reviews_table.py  7a1c0b2e9f01_add_budget_items.py  7b2c0d1e4f21_add_rating_snapshots.py  8a01_finance_core.py  8a1c4f9b2e10_notifications_table.py  a1b2c3d4e5f6_staff_tables.py  a1f2b3c4d5e6_processes.py  a1u2d3i4t5l6_audit_logs.py  a2b3c4d5e6f7_audit_logs_table.py  b17c5ub5cr1p_subscriptions.py  b2c3d4e5f6a7_time_entries.py  c2d7f3a481b9_inbound_inquiries.py  c3d4e5f6a7b8_process_photos.py  c3d4e5f6a7b8_staff_loans.py  c4d5e6f7a8b9_staff_certifications.py  d0c5m3nt001_documents_table.py  d4e5f6a7b8c9_staff_assignments.py  d4f80a1b3c22_notification_preferences.py  e1f2a3b4c5d6_push_subscriptions.py  ex4p0rth1st01_export_history.py  f1a2b3c4d5e6_subcontractor_management.py  f1d2c3b4a5e6_incidents_table.py  gp5ch3ck1n01_gps_checkin.py  p1u2n3c4h5i6_punch_items_table.py  q1u2o3t4e5s6_quotes_tables.py  s4h4r3t0k3n01_share_tokens.py  u51agem3t3r2_usage_counters.py  w3bh00k001_webhook_system.py
src/backend/app/: main.py
src/backend/app/core/: audit_middleware.py  config.py  database.py  logging.py  rate_limit.py  rate_limit_middleware.py  security.py
src/backend/app/models/: __init__.py  assignment.py  audit_log.py  btw.py  customer.py  document.py  equipment.py  export_history.py  finance.py  geofence.py  inbound_inquiry.py  incident.py  invoice.py  loan.py  material.py  notification.py  notification_preference.py  offerte.py  payroll.py  process.py  process_photo.py  project.py  punch_item.py  push_subscription.py  (+14 more)
(+612 files in other folders)
