[project]
name = "foreman-backend"
version = "0.1.0"
description = "AI-powered construction building planning platform — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "openai>=1.57",
    "python-multipart>=0.0.20",
    "email-validator>=2.1",
    "icalendar>=5.0",
]

[project.scripts]
foreman = "app.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "ty>=0.0.1",
    "bandit>=1.8",
    "safety>=3.0",
    "codespell>=2.3",
    "pre-commit>=3.7",
    "aiosqlite>=0.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "S", "SIM", "TCH", "ANN", "ARG", "RUF",
]
ignore = [
    "ANN101", "ANN102", "S101", "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.ty]
strict = false
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["../../tests/backend"]
pythonpath = ["."]
addopts = "-v --tb=short -m 'not live'"
asyncio_mode = "strict"
markers = [
    "live: hits real external services; skipped by default",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
